--- a/sample/src/main/res/layout/activity_main.xml
+++ b/sample/src/main/res/layout/activity_main.xml
@@ -69,6 +69,15 @@
             android:layout_height="wrap_content"
             android:layout_margin="@dimen/dp_15"
             android:text="@string/server_stop_succeed"/>
+        <EditText
+            android:id="@+id/etLog"
+            android:editable="false"
+            android:textSize="12sp"
+            android:gravity="start"
+            android:focusable="true"
+            android:layout_weight="1"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"/>
     </LinearLayout>
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
